--- a/examples/Simple/unit1.lfm
+++ b/examples/Simple/unit1.lfm
@@ -7,8 +7,9 @@ object Form1: TForm1
   Caption = 'Form1'
   ClientHeight = 390
   ClientWidth = 583
+  DesignTimePPI = 101
   OnCreate = FormCreate
-  LCLVersion = '1.2.4.0'
+  Visible = False
   object MPlayerControl1: TMPlayerControl
     Left = 6
     Height = 334
@@ -28,6 +29,7 @@ object Form1: TForm1
     AutoSize = True
     ClientHeight = 21
     ClientWidth = 583
+    ParentFont = False
     TabOrder = 1
     object PlaySpeedButton: TSpeedButton
       Left = 1
@@ -38,6 +40,7 @@ object Form1: TForm1
       AutoSize = True
       Caption = 'Play'
       OnClick = PlaySpeedButtonClick
+      ParentFont = False
     end
     object PauseSpeedButton: TSpeedButton
       Left = 27
@@ -48,6 +51,7 @@ object Form1: TForm1
       AutoSize = True
       Caption = 'Pause'
       OnClick = PauseSpeedButtonClick
+      ParentFont = False
     end
     object StopSpeedButton: TSpeedButton
       Left = 62
@@ -58,6 +62,7 @@ object Form1: TForm1
       AutoSize = True
       Caption = 'Stop'
       OnClick = StopSpeedButtonClick
+      ParentFont = False
     end
     object OpenSpeedButton: TSpeedButton
       Left = 90
@@ -68,6 +73,7 @@ object Form1: TForm1
       AutoSize = True
       Caption = 'Open file'
       OnClick = OpenSpeedButtonClick
+      ParentFont = False
     end
   end
   object StatusBar1: TStatusBar
@@ -76,10 +82,11 @@ object Form1: TForm1
     Top = 367
     Width = 583
     Panels = <>
+    ParentFont = False
   end
   object OpenDialog1: TOpenDialog
     Options = [ofFileMustExist, ofEnableSizing, ofViewDetail]
-    left = 235
-    top = 127
+    Left = 235
+    Top = 127
   end
 end
